--- a/style.css
+++ b/style.css
@@ -42,11 +42,17 @@ p {
   align-content: center;
   width: 100%;
   height: 90vh;
-  background: gray;
+  background: #cccccc;
 }
 
 .game-field__cell {
   width: 100%;
-  border: 1px solid gray;
+  border: 2px solid #b5b5b5;
   background: white;
+  transition: background-color 0.3s ease;
+}
+
+.game-field__cell:hover {
+  background: #c0c0c0;
+  cursor: pointer;
 }
