--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ p {
 .moves__count {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 1em;
+  font-size: 2em;
 }
 
 /* game zone */
@@ -46,10 +46,17 @@ p {
 }
 
 .game-field__cell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   border: 2px solid #b5b5b5;
   background: white;
   transition: background-color 0.3s ease;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
+  font-weight: 900;
 }
 
 .game-field__cell:hover {
