--- a/style.css
+++ b/style.css
@@ -8,21 +8,67 @@ p {
 .game-field {
   display: block;
   margin: 0 auto;
-  width: 90%;
+  width: 99.5%;
 }
 
 .game-field__header {
-  display: inline-flex;
-  width: 100%;
+  display: flex;
   justify-content: center;
-  background: #00ff84;
+  align-items: center;
+  width: 100%;
+  height: 150px;
+  background: #c0c0c0;
+}
+
+.header__items {
+  display: flex;
+  
+  justify-content: space-evenly;
+  width: 50%;
+}
+
+.section-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.smile-btn {
+  width: 60px;
+  height: 60px;
+  background-size: contain;
+  border: none;
+
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+
+.count-flags {
+  margin-top: 20px;
+  width: 60px;
+  text-align: center;
 }
 
 .timer,
 .moves {
-  display: inline-flex;
-  flex-direction: column;
-  width: 20%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 60px;
+}
+
+.timer,
+.moves,
+.count-flags {
+  background: #000;
+  color: #ff0000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2em;
+}
+
+.smile-btn:active {
+  transform: scale(0.95);
 }
 
 .timer__title,
@@ -41,7 +87,6 @@ p {
   justify-content: center;
   align-content: center;
   width: 100%;
-  height: 90vh;
   background: #cccccc;
 }
 
@@ -49,7 +94,6 @@ p {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
   border: 2px solid #b5b5b5;
   background: white;
   transition: background-color 0.3s ease;
@@ -70,4 +114,48 @@ p {
 
 .s1 {
   background: red;
+}
+
+/* menu styles */
+.main-menu {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  width: 99.5%;
+  margin: 0 auto;
+
+  border: 3px outset #f0f0f0;
+  background: #adadad;
+  transition: 0.3s ease;
+}
+
+.main-menu__buttons {
+  display: flex;
+  width: 20%;
+  justify-content: space-evenly;
+}
+
+.main-menu__btn {
+  width: 40px;
+  height: 40px;
+  border: 2px solid #808080;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 30px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+.main-menu__btn:hover {
+  background: #cecece;
+  color: #f0f0f0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 30px;
+}
+
+.main-menu__btn:active {
+  border-top: 2px solid #4e4e4e;
+  border-left: 2px solid #4e4e4e;
+  transform: scale(0.95);
 }
