--- a/style.css
+++ b/style.css
@@ -95,11 +95,10 @@ p {
   align-items: center;
   justify-content: center;
   border: 2px solid #b5b5b5;
-  background: white;
+  background: #ffffff;
   transition: background-color 0.3s ease;
-
+  
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 2em;
   font-weight: 900;
 }
 
