--- a/style.css
+++ b/style.css
@@ -106,6 +106,10 @@ p {
   background: #cccccc;
 }
 
+.flag {
+  cursor: pointer;
+}
+
 .game-field__cell:hover {
   background: #c0c0c0;
   cursor: pointer;
@@ -159,7 +163,7 @@ p {
   transform: scale(0.95);
 }
 
-.dialog-menu {
+.dialog {
   position: absolute;
   display: flex;
   align-items: center;
@@ -169,22 +173,24 @@ p {
   z-index: 1;
 }
 
-.defeat-menu {
+.dialog__defeat,
+.dialog__win {
   display: flex;
   flex-direction: column;
   align-items: center;
   background: #cecece;
-  width: 25%;
+  width: 35%;
+  border: 3px outset #f0f0f0;
 }
 
-.defeat-menu__title,
-.defeat-menu__message,
-.defeat-menu__close-button {
+.dialog__title,
+.dialog__message,
+.dialog__close-button {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.defeat-menu__close-button {
+.dialog__close-button {
   width: 50%;
   margin: 10px 0;
   cursor: pointer;
